[gd_scene load_steps=2 format=3 uid="uid://cwj8wn7ciw6kx"]

[ext_resource type="Script" uid="uid://cjn8r0f1agwfm" path="res://scenes/ui/event_choice_button.gd" id="1_3t23q"]

[node name="EventChoiceButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3t23q")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 21
bbcode_enabled = true
text = "Title example"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
bbcode_enabled = true

[node name="CostLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
